[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI_elements/banner_2.png" type="Texture2D" id=1]
[ext_resource path="res://UI_elements/button_normal.png" type="Texture2D" id=2]
[ext_resource path="res://UI_elements/button_pressed.png" type="Texture2D" id=3]
[ext_resource path="res://UI_elements/close_button_pressed.png" type="Texture2D" id=4]
[ext_resource path="res://UI_elements/close_button_normal.png" type="Texture2D" id=5]
[ext_resource path="res://ConfirmRemoveWindow.gd" type="Script" id=6]

[node name="ConfirmRemoveWindow" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -66.0
offset_right = 146.5
offset_bottom = 66.0
script = ExtResource( 6 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 7.0
offset_bottom = 10.0
custom_minimum_size = Vector2( 300, 140 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/VBoxContainer"]
offset_right = 300.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 0, 30 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Header" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header"]
offset_right = 96.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 96, 0 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 100, 0 )
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "REMOVE"
align = 1
valign = 1

[node name="Control2" type="Control" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header"]
offset_left = 204.0
offset_right = 300.0
offset_bottom = 30.0
size_flags_horizontal = 3

[node name="Exit" type="TextureButton" parent="NinePatchRect/VBoxContainer/NinePatchRect/Header/Control2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -15.0
offset_bottom = 15.0
custom_minimum_size = Vector2( 30, 30 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer"]
offset_top = 34.0
offset_right = 300.0
offset_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/VBoxContainer"]
offset_right = 300.0
offset_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "ARE YOU SURE YOU WANT TO 
REMOVE THIS ITEM?"
align = 1
valign = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect/VBoxContainer"]
offset_top = 112.0
offset_right = 300.0
offset_bottom = 142.0
custom_minimum_size = Vector2( 0, 30 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Buttons" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Confirm" type="TextureButton" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons"]
offset_left = 61.0
offset_right = 131.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 70, 0 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Confirm"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons"]
offset_left = 135.0
offset_right = 165.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 30, 0 )

[node name="Cancel" type="TextureButton" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons"]
offset_left = 169.0
offset_right = 239.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 70, 0 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Cancel"
align = 1
valign = 1

[connection signal="button_up" from="NinePatchRect/VBoxContainer/NinePatchRect/Header/Control2/Exit" to="." method="_on_Exit_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Confirm" to="." method="_on_Confirm_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/NinePatchRect2/Buttons/Cancel" to="." method="_on_Cancel_button_up"]
